[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-rl-case-study"
version = "0.1.0"
description = "GPU performance engineering case study using RL workloads (CarRacing + ALE Pacman)"
authors = [
    { name = "Mark Harris" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "gymnasium>=0.29",
]

[project.optional-dependencies]

# Atari / ALE support
atari = [
    "gymnasium[atari]>=0.29",
    "ale-py>=0.8.1",
    "autorom>=0.6.1",
]

# CarRacing / Box2D support
box2d = [
    "gymnasium[box2d]>=0.29",
    "box2d-py>=2.3.5",
]

# ML stack (Week 2+)
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
]

# Dev tooling
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "replay*", "metrics*"]

# ---- Ruff ----
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

# ---- Black ----
[tool.black]
line-length = 100
target-version = ["py310"]

# ---- Pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
