[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-rl-case-study"
version = "0.1.0"
description = "GPU performance engineering case study using RL workloads (CarRacing + ALE Pacman)"
authors = [
    { name = "Mark Harris" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
# .mp4 support for video recording and playback
video = [
  "imageio>=2.34",
  "imageio-ffmpeg>=0.4.9",
]

# Atari / ALE support
atari = [
    "gymnasium[atari]>=0.29",
    "ale-py>=0.8.1",
    "autorom>=0.6.1",
]

# CarRacing / Box2D support
box2d = [
    "gymnasium[box2d]>=0.29",
    "box2d-py>=2.3.5",
]

# ML stack (Week 2+)
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
]

# Dev tooling
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.9",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.5.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "replay*", "metrics*"]

# ---- Ruff ----
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
]
ignore = [
  "E203",
  "E501",
  "B008", # python-bugbear specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# ---- Black ----
[tool.black]
line-length = 100
target-version = ["py310"]

# ---- Pytest ----
[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
